[package]
name = "plot"
version = "0.1.0"
authors = ["Narciso Benigno <narciso.benigno@indebted.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
plotters = "0.3.1"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
